--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
+html
+{
+    height: 100%;
+}
+
 body {
-    font-family: 'Urbanist', sans-serif;
+    margin: 0;
+    height: 100%;
+    font-family: "Urbanist", "Helvetica Neue", sans-serif;
+    background-color: rgba(70, 131, 180, 0.103);
+    font-size: 18px;
+    font-weight: 300;
 }
