--- a/src/app/notes-collection/notes-collection.component.html
+++ b/src/app/notes-collection/notes-collection.component.html
@@ -1,6 +1,6 @@
 <div class="main-div">    
     <mat-card *ngFor='let note of notes' class="note-card" (click)="onClick()">
-        <mat-card-header>
+        <mat-card-header class="note-card-header">
             <mat-card-title>{{note}}</mat-card-title>
             <mat-card-subtitle>This is a text message</mat-card-subtitle>
         </mat-card-header>
