--- a/src/app/notes-collection/notes-collection.component.html
+++ b/src/app/notes-collection/notes-collection.component.html
@@ -1,5 +1,5 @@
 <div class="main-div">    
-    <mat-card *ngFor='let note of noteList.title' class="note-card">
+    <mat-card *ngFor='let note of noteList.title' class="note-card" (click)="noteCardClick(note)">
         <mat-card-header class="note-card-header">
             <mat-card-title>{{note}}</mat-card-title>
             <mat-card-subtitle>This is a text message</mat-card-subtitle>
