--- a/src/app/note-details/note-details.component.html
+++ b/src/app/note-details/note-details.component.html
@@ -1,1 +1,3 @@
-<p>note-details works!</p>
+<h1 mat-dialog-title>{{this.data.title}}</h1>
+<h3>{{this.data.subtitle}}</h3>
+<h3>{{this.data.pages}}</h3>
