--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+<mat-toolbar>
+    <button mat-icon-button><mat-icon>menu</mat-icon></button>
+    <span>Hello</span>
+</mat-toolbar>
 <app-notes-collection></app-notes-collection>
