--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
-html
-{
+@use '~@angular/material' as mat;
+
+@import './assets/theme.scss';
+
+html {
     height: 100%;
 }
 
@@ -9,7 +12,7 @@ body {
     margin: 0;
     height: 100%;
     font-family: "Urbanist", "Helvetica Neue", sans-serif;
-    background-color: rgba(70, 131, 180, 0.103);
+    background-color: mat.get-color-from-palette($mat-primary);
     font-size: 18px;
     font-weight: 300;
 }
