--- a/src/app/notes-collection/notes-collection.component.scss
+++ b/src/app/notes-collection/notes-collection.component.scss
@@ -1,3 +1,7 @@
+@use '~@angular/material' as mat;
+
+@import '/src/assets/theme.scss';
+
 .main-div {
     width: 100%;
     display: flex;
@@ -11,7 +15,7 @@
 }
 
 .note-card:hover {
-    box-shadow: 0 0 25px lightsteelblue;
+    box-shadow: 0 0 25px mat.get-color-from-palette($mat-shadow);
 }
 
 @media only screen and (max-width: 540px) {
