--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 
 @use '~@angular/material' as mat;
 
-@import './assets/theme.scss';
+@import '/src/assets/theme.scss';
 
 html {
     height: 100%;
@@ -12,7 +12,7 @@ body {
     margin: 0;
     height: 100%;
     font-family: "Urbanist", "Helvetica Neue", sans-serif;
-    background-color: mat.get-color-from-palette($mat-primary);
+    background-color: mat.get-color-from-palette($mat-accent);
     font-size: 18px;
     font-weight: 300;
 }
