--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@ body {
     margin: 0;
     height: 100%;
     font-family: "Urbanist", "Helvetica Neue", sans-serif;
-    background-color: mat.get-color-from-palette($mat-accent);
+    background-color: white;
     font-size: 18px;
     font-weight: 300;
 }
