Started working on toolbar and sidenav

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,39 +6,33 @@ mat-toolbar {
     box-shadow: 0 0 25px mat.get-color-from-palette($mat-shadow, 500);
 }
 
-mat-toolbar > button {
-    background: inherit;
-    border: none;
-    margin-right: 5px;
-    color: whitesmoke;
+mat-sidenav-container {
+    width: 100%;
 }
 
-mat-drawer-container {
+mat-sidenav {
+    padding: 20px;
+}
+
+mat-sidenav-content {
+    background-color: mat.get-color-from-palette($mat-accent);
     width: 100%;
-    height: 100%;
 }
 
 @media only screen and (max-width: 540px) {
-    mat-drawer {
+    mat-sidenav {
         width: 80%;
-        padding: 20px;
     }
 }
 
 @media only screen and (min-width: 540px) {
-    mat-drawer {
+    mat-sidenav {
         width: 50%;
-        padding: 20px;
     }
 }
 
 @media only screen and (min-width: 720px) {
-    mat-drawer {
+    mat-sidenav {
         width: 20%;
-        padding: 20px;
     }
-}
-
-.sidenav-content {
-    background-color: mat.get-color-from-palette($mat-accent);
 }
