--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-<mat-drawer-container>
-    <mat-drawer #drawer mode="over" opened>
+<mat-sidenav-container>
+    <mat-sidenav #drawer mode="over" fixedinViewport="true">
         <h1>Projects</h1>
-    </mat-drawer>
-    <div class="sidenav-content">
-        <mat-toolbar color="primary" class="toolbar">
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <mat-toolbar color="primary">
             <button mat-icon-button (click)="drawer.toggle()"><mat-icon>menu</mat-icon></button>
             <span>Project_Name</span>
         </mat-toolbar>
         <app-notes-collection></app-notes-collection>
-    </div>
-</mat-drawer-container>
+    </mat-sidenav-content>
+</mat-sidenav-container>
