--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,10 +4,14 @@
 
 mat-toolbar {
     box-shadow: 0 0 25px mat.get-color-from-palette($mat-shadow, 500);
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
 mat-sidenav-container {
     width: 100%;
+    position: relative;
 }
 
 mat-sidenav {
