Made side nav fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <span>Project_Name</span>
 </mat-toolbar>
 <mat-sidenav-container>
-    <mat-sidenav #drawer mode="over" fixedinViewport="true">
+    <mat-sidenav #drawer mode="over" fixedInViewport="true" fixedTopGap="55" autoFocus="false">
         <h1>Projects</h1>
     </mat-sidenav>
     <mat-sidenav-content>
