--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,11 +11,11 @@ mat-toolbar {
 
 mat-sidenav-container {
     width: 100%;
-    position: relative;
 }
 
 mat-sidenav {
     padding: 20px;
+    height: 100%;
 }
 
 mat-sidenav-content {
