--- a/src/app/notes-collection/notes-collection.component.scss
+++ b/src/app/notes-collection/notes-collection.component.scss
@@ -18,6 +18,12 @@
     box-shadow: 0 0 25px mat.get-color-from-palette($mat-shadow);
 }
 
+#add-note-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
 @media only screen and (max-width: 540px) {
     .note-card {
         width: 46%;
