Added add new note component

--- a/src/app/notes-collection/notes-collection.component.html
+++ b/src/app/notes-collection/notes-collection.component.html
@@ -5,5 +5,5 @@
             <mat-card-subtitle>{{note.subtitle}}</mat-card-subtitle>
         </mat-card-header>
     </mat-card>
-    <button mat-fab id="add-note-button"><mat-icon>add</mat-icon></button>
+    <button mat-fab id="add-note-button" (click)="addNoteClick()"><mat-icon>add</mat-icon></button>
 </div>
