--- a/src/app/new-note/new-note.component.html
+++ b/src/app/new-note/new-note.component.html
@@ -1,1 +1,8 @@
-<p>new-note works!</p>
+<div id="new-note-form">
+    <mat-form-field appearance="outline">
+        <mat-label>Title</mat-label>
+        <input matInput [(ngModel)]="noteTitle">
+    </mat-form-field>
+    <br>
+    <span><button mat-flat-button color="primary" (click)="submitClick()">Create new note</button></span>
+</div>
