--- a/src/app/note-details/note-details.component.html
+++ b/src/app/note-details/note-details.component.html
@@ -1,3 +1,3 @@
-<h1 mat-dialog-title>{{this.data.title}}</h1>
-<h3>{{this.data.subtitle}}</h3>
-<h3>{{this.data.pages}}</h3>
+<h1 mat-dialog-title>{{this.note.title}}</h1>
+<h3>{{this.note.subtitle}}</h3>
+<h3>{{this.note.pages}}</h3>
