Made changes to toolbar margin

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <mat-toolbar color="primary">
     <button mat-icon-button (click)="drawer.toggle()"><mat-icon>menu</mat-icon></button>
-    <span>Project_Name</span>
+    <span class="toolbar-header">Project_Name</span>
 </mat-toolbar>
 <mat-sidenav-container>
     <mat-sidenav #drawer mode="over" fixedInViewport="true" fixedTopGap="55" autoFocus="false">
         <h1>Projects</h1>
     </mat-sidenav>
     <mat-sidenav-content>
-        <app-notes-collection></app-notes-collection>
+        <app-home-page></app-home-page>
     </mat-sidenav-content>
 </mat-sidenav-container>
