Added a basic home page

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,8 @@
 <div class="main-div">
-    <h1>Hello World</h1>
+    <div class="banner">
+        <div class="banner-text">
+            <span class="mat-display-2 banner-title">Smart Notes</span>
+            <span class="mat-headline banner-subtitle">Your notes just became smarter!</span>
+        </div>
+    </div>
 </div>
