--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,6 +42,10 @@ mat-sidenav-content {
     }
 }
 
+button {
+    margin: 0px 5px 0px 5px;
+}
+
 .toolbar-header {
     margin: 0px 5px 0px 5px;
 }
