--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,12 @@ body {
     font-weight: 300;
 }
 
-.note-detail {
-    width: 100%;
+.horizontal-spacer {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.vertical-spacer {
+    margin-top: auto;
+    margin-bottom: auto;
 }
