Update project to use mock data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,6 @@
         <h1>Projects</h1>
     </mat-sidenav>
     <mat-sidenav-content>
-        <app-home-page></app-home-page>
+        <app-notes-collection></app-notes-collection>
     </mat-sidenav-content>
 </mat-sidenav-container>
