--- a/src/app/login-modal/login-modal.component.scss
+++ b/src/app/login-modal/login-modal.component.scss
@@ -3,7 +3,24 @@
 @import '/src/assets/theme.scss';
 
 .main-div {
-    width: 25vw;
     height: 60vh;
     text-align: center;
+}
+
+@media only screen and (max-width: 540px) {
+    .main-div {
+        width: 80vw;
+    }
+}
+
+@media only screen and (min-width: 540px) {
+    .main-div {
+        width: 50vw;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .main-div {
+        width: 25vw;
+    }
 }
