--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,20 +1,11 @@
 <div class="main-div">
-    <mat-card class="dash-card">
+    <mat-card class="dash-card recent-card">
         <mat-card-title>Recent Notes</mat-card-title>
     </mat-card>
-    <mat-card class="dash-card">
+    <mat-card class="dash-card active-card">
         <mat-card-title>Active Projects</mat-card-title>
     </mat-card>
     <mat-card class="dash-card stats-card">
-        <mat-card-title>Activity</mat-card-title>
-    </mat-card>
-    <mat-card class="dash-card">
-        <mat-card-title>Recent Notes</mat-card-title>
-    </mat-card>
-    <mat-card class="dash-card">
-        <mat-card-title>Active Projects</mat-card-title>
-    </mat-card>
-    <mat-card class="dash-card">
         <mat-card-title>Activity</mat-card-title>
     </mat-card>
 </div>
