--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -33,14 +33,23 @@ mat-card-title {
     }
 }
 
-.dash-card {
-    aspect-ratio: 1 / 0.75;
-}
-
 @media only screen and (max-width: 540px) {
     .dash-card {
         margin: 2%;
         width: 98%;
+        aspect-ratio: 1 / 0.8;
+    }
+
+    .stats-card {
+        order: 1;
+    }
+    
+    .recent-card {
+        order: 2;
+    }
+
+    .active-card {
+        order: 3;
     }
 }
 
@@ -48,6 +57,7 @@ mat-card-title {
     .dash-card {
         margin: 2%;
         width: 46%;
+        aspect-ratio: 1 / 0.8;
     }
 }
 
@@ -55,9 +65,6 @@ mat-card-title {
     .dash-card {
         margin: 1%;
         width: 31.33%;
+        aspect-ratio: 1 / 1.35;
     }
-}
-
-.stats-card {
-    
 }
