--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,9 @@
     </mat-sidenav>
     <mat-sidenav-content>
         <!--
-        <app-home-page *ngIf="!loggedIn"></app-home-page>
         <app-notes-collection *ngIf="loggedIn"></app-notes-collection>
         -->
-        <app-dashboard (titleEmitter)="setToolbarTitle($event)"></app-dashboard>
+        <app-home-page *ngIf="!loggedIn"></app-home-page>
+        <app-dashboard *ngIf="loggedIn" (titleEmitter)="setToolbarTitle($event)"></app-dashboard>
     </mat-sidenav-content>
 </mat-sidenav-container>
