--- a/src/app/signup-modal/signup-modal.component.html
+++ b/src/app/signup-modal/signup-modal.component.html
@@ -1,1 +1,15 @@
-<p>signup-modal works!</p>
+<div class="main-div">
+    <p class="mat-headline">Create account</p>
+    <mat-form-field appearance="outline" [style.width.%]="90">
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="Enter you email">
+    </mat-form-field>
+    <br>
+    <mat-form-field appearance="outline" [style.width.%]="90">
+        <mat-label>Password</mat-label>
+        <input matInput placeholder="Enter a password">
+    </mat-form-field>
+    <br>
+    <button mat-flat-button color="primary" (click)="createAccountClick()">Create Account</button>
+    <button mat-flat-button color='accent' (click)="cancelClick()">Cancel</button>
+</div>
