--- a/src/app/signup-modal/signup-modal.component.html
+++ b/src/app/signup-modal/signup-modal.component.html
@@ -2,12 +2,16 @@
     <p class="mat-headline">Create account</p>
     <mat-form-field appearance="outline" [style.width.%]="90">
         <mat-label>Email</mat-label>
-        <input matInput placeholder="Enter you email">
+        <input matInput placeholder="Email">
     </mat-form-field>
     <br>
     <mat-form-field appearance="outline" [style.width.%]="90">
         <mat-label>Password</mat-label>
-        <input matInput placeholder="Enter a password">
+        <input matInput placeholder="Password">
+    </mat-form-field>
+    <mat-form-field appearance="outline" [style.width.%]="90">
+        <mat-label>Confirm Password</mat-label>
+        <input matInput placeholder="Confirm Password">
     </mat-form-field>
     <br>
     <button mat-flat-button color="primary" (click)="createAccountClick()">Create Account</button>
