--- a/src/app/account-creation/account-creation.component.html
+++ b/src/app/account-creation/account-creation.component.html
@@ -3,19 +3,24 @@
         <mat-card-title id="account-form-card-title">Let's create your account!</mat-card-title>
         <mat-form-field appearance="outline" class="name-field">
             <mat-label>First Name</mat-label>
-            <input matInput placeholder="Enter your first name">
+            <input matInput [(ngModel)]="firstName" placeholder="Enter your first name">
         </mat-form-field>
         <mat-form-field appearance="outline" class="name-field">
             <mat-label>Last Name</mat-label>
-            <input matInput placeholder="Enter your last name">
+            <input matInput [(ngModel)]="lastName" placeholder="Enter your last name">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="pass-field">
+            <mat-label>Email</mat-label>
+            <input matInput [(ngModel)]="email" placeholder="Enter your email">
         </mat-form-field>
         <mat-form-field appearance="outline" class="pass-field">
             <mat-label>Password</mat-label>
-            <input matInput  type="password" placeholder="Enter a password(8-20 characters)">
+            <input matInput type="password" placeholder="Enter a password(8-20 characters)">
         </mat-form-field>
         <mat-form-field appearance="outline" class="pass-field">
             <mat-label>Confirm Password</mat-label>
-            <input matInput type="password" placeholder="Re-enter you password">
+            <input matInput type="password" [(ngModel)]="pass" placeholder="Re-enter you password">
         </mat-form-field>
+        <button mat-flat-button color="primary" id="create-account-button" (click)="createButtonClick()">Create Account</button>
     </mat-card>
 </div>
