--- a/src/app/account-creation/account-creation.component.scss
+++ b/src/app/account-creation/account-creation.component.scss
@@ -6,10 +6,6 @@
     text-align: center;
 }
 
-#account-form-card-title {
-    margin: 5% 0 8% 0;
-}
-
 @media only screen and (max-width: 540px) {
     #account-details {
         margin: 5%;
@@ -26,10 +22,14 @@
 
 @media only screen and (min-width: 1024px) {
     #account-details {
-        margin: 5% auto 0 auto;
+        margin: 3% auto 0 auto;
         width: 25%;
-        aspect-ratio: 1 / 1.25;
+        aspect-ratio: 1 / 1.4;
     }
+}
+
+#account-form-card-title {
+    margin: 5% 0 8% 0;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -55,8 +55,9 @@
 
 .validation-errors {
     color: mat.get-color-from-palette($mat-warn);
+    margin: 4%;
 }
 
 #create-account-button {
-    margin: 5% 0 5% 0;
+    margin: 5% 0 0 0;
 }
