--- a/src/app/accounts/login-modal/login-modal.component.html
+++ b/src/app/accounts/login-modal/login-modal.component.html
@@ -1,11 +1,11 @@
 <div class="main-div">
     <p class="mat-headline">Welcome back!</p>
-    <mat-form-field appearance="outline" [style.width.%]="90">
+    <mat-form-field appearance="outline">
         <mat-label>Email</mat-label>
         <input matInput [(ngModel)]="email" placeholder="Enter your registered email">
     </mat-form-field>
     <br>
-    <mat-form-field appearance="outline" [style.width.%]="90">
+    <mat-form-field appearance="outline">
         <mat-label>Password</mat-label>
         <input matInput [(ngModel)]="pass" placeholder="Enter your password" type="password">
     </mat-form-field>
