--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,7 @@
         <h1>Projects</h1>
     </mat-sidenav>
     <mat-sidenav-content>
-        <!--
-        <app-notes-collection *ngIf="userLoggedIn"></app-notes-collection>
-        <app-dashboard *ngIf="userLoggedIn" (titleEmitter)="setToolbarTitle($event)"></app-dashboard>
-        <app-account-creation (titleEmitter)="setToolbarTitle($event)"></app-account-creation>
-        <app-home-page *ngIf="!userLoggedIn"></app-home-page>
-        -->
-        <router-outlet></router-outlet>
+        <!--<router-outlet></router-outlet>-->
+        <app-dashboard></app-dashboard>
     </mat-sidenav-content>
 </mat-sidenav-container>
