--- a/src/app/notes/new-project/new-project-modal.component.html
+++ b/src/app/notes/new-project/new-project-modal.component.html
@@ -1,1 +1,15 @@
-<p>new-project works!</p>
+<div class="main-div">
+    <p class="mat-headline">Create a new project</p>
+    <mat-form-field appearance="outline">
+        <mat-label>Project name</mat-label>
+        <input matInput placeholder="Enter a project name">
+    </mat-form-field>
+    <br>
+    <mat-form-field appearance="outline">
+        <mat-label>Description</mat-label>
+        <textarea matInput rows="8" placeholder="Describe your project in a few lines"></textarea>
+    </mat-form-field>
+    <br>
+    <button mat-flat-button color="primary">Create</button>
+    <button mat-flat-button color="accent">Cancel</button>
+</div>
