--- a/src/app/accounts/login-modal/login-modal.component.scss
+++ b/src/app/accounts/login-modal/login-modal.component.scss
@@ -6,6 +6,10 @@ button {
     text-align: center;
 }
 
+.main-div > mat-form-field {
+    width: 90%;
+}
+
 @media only screen and (max-width: 540px) {
     .main-div {
         width: 80vw;
